// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expenses Summary Component should render with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $200.00
  </h2>
</div>
`;

exports[`Expenses Summary Component should render with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    22
     
    expenses
     totalling 
    $123,456.00
  </h2>
</div>
`;
